--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "mocha": "^3.1.2",
     "should": "^11.1.1",
-    "supertest": "^2.0.1",
-    "mocha-jenkins-reporter": "0.3.12"
+    "mocha-jenkins-reporter": "^0.3.7",
+    "supertest": "^2.0.1"
   },
   "scripts": {
-    "test-jenkins": "JUNIT_REPORT_PATH=/report.xml mocha --colors --reporter mocha-jenkins-reporter"
+    "start": "JUNIT_REPORT_PATH=test-result/result.xml JUNIT_REPORT_STACK=1 mocha --timeout 25000 --colors --reporter mocha-jenkins-reporter || true"
   },
   "keywords": [],
   "repository": {
