--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
-    "start": "JUNIT_REPORT_PATH=test-result/result.xml JUNIT_REPORT_STACK=1 mocha --timeout 25000 --colors --reporter mocha-jenkins-reporter || true"
+    "start": "JUNIT_REPORT_PATH=test-result/result.xml mocha --colors --reporter mocha-jenkins-reporter"
   },
   "keywords": [],
   "repository": {
