--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "devDependencies": {
     "mocha": "^3.1.2",
-    "should": "^11.1.1",
     "mocha-jenkins-reporter": "^0.3.7",
+    "mocha-junit-reporter": "^1.17.0",
+    "should": "^11.1.1",
     "supertest": "^2.0.1"
   },
   "scripts": {
-    "start": "JUNIT_REPORT_PATH=test-result/result.xml mocha --colors --reporter mocha-jenkins-reporter"
+    "test": "mocha"
   },
   "keywords": [],
   "repository": {
