--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "oniguruma": "^7.0.0"
   },
   "devDependencies": {
     "mocha": "^3.1.2",
@@ -18,7 +19,7 @@
     "supertest": "^2.0.1"
   },
   "scripts": {
-    "test": "mocha", 
+    "test": "mocha",
     "start": "test/test.js"
   },
   "keywords": [],
