--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mocha-junit-reporter": "^1.17.0",
     "mocha-multi": "^1.0.1",
     "should": "^11.1.1",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "xunit-file": "^1.0.0"
   },
   "scripts": {
     "test": "mocha",
